[package]
name = "rfprop"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
cxx = "1"
log = "0.4"
thiserror = "1"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[build-dependencies]
cmake = "0.1"
cxx-build = "1.0"

[features]
default = []
address_sanitizer = []

[profile.bench]
debug = true

[[bench]]
name = "rfprop_benches"
harness = false
